--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_tempest">tempest</string>
     <string name="title_activity_checkingactivity">checkingactivity</string>
+    <string name="title_activity_change_password">ChangePassword</string>
 </resources>
